--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-creative-portfolio-starter-code-files",
+  "name": "MyPortfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,8 +18,8 @@
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.0",
-    "sonner": "^1.4.3",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^1.7.4",
     "three": "^0.162.0"
   },
   "devDependencies": {
